# Pt_workflow

./: .gitignore  README.md  bash_scripts.py  calculations_steps.py  config.py  engine.py  ir.py  pyproject.toml  scheduler.py  utils.py
input_files/: ar1mol1.com  ar1mol2.com  ar1mol3.com  ar1mol4.com  ar1mol5.com  ar33mol10.com  ar33mol11.com  ar33mol12.com  ar33mol13.com  ar33mol14.com  ar33mol15.com  ar33mol8.com  ar33mol9.com  ar34mol1.com  ar35mol19.com  ar36mol1.com  ar36mol2.com  ar37mol1.com  ar38mol4.com  ar38mol5.com  ar39mol10t.com  ar39mol11t.com  ar39mol1c.com  ar39mol1t.com  ar39mol2t.com  ar39mol3t.com  ar39mol4c.com  ar39mol5c.com  ar39mol6c.com  ar39mol7c.com  ar39mol7t.com  ar39mol8c.com  ar39mol8t.com  ar39mol9c.com  ar39mol9t.com  ar3mol4.com  ar4mol3.com  ar5mol2.com  ar5mol2.xyz  ar5mol22.com  (+7 more)
ptpy/: __main__.py  calculations_steps.py  config.py  engine.py  interaction.py  ir.py  logger.py  parser.py  repository.py  scheduler.py  scripts.py  smiles.py  utils.py
ptpy/bases/: Br_opt_plus_bas  Br_pot  Cl_opt_plus_bas  Cl_pot  I_opt_plus_bas  I_pot  P_opt_plus_bas  P_pot  Pt_opt_plus_bas  Pt_pot  S_opt_plus_bas
repo_smoke_a633cdfa26664d5b828f56b7b901e24a/: case1.json  metadata.json
